--- a/frontend/latencyzero_client/src/app/features/agent/pages/agent-page/agent-page.html
+++ b/frontend/latencyzero_client/src/app/features/agent/pages/agent-page/agent-page.html
@@ -1,6 +1,6 @@
 <chat-sessions></chat-sessions>
 
-<main class="flex flex-col flex-1 min-w-0 min-h-0 relative">
+<main class="flex flex-col flex-1 min-w-0 min-h-[50vh] relative">
 
   <chat-header></chat-header>
 
@@ -142,9 +142,6 @@
         </div>
       </div>
       }
-
-      <!-- Scroll anchor -->
-      <div #messagesEnd></div>
     </div>
     }
   </div>
